--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,24 @@ db.sqlite3
 .env
 .vscode/
 .idea/
+node_modules/
+
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
+
+# E
