--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,9 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "@slack/web-api": "^6.7.2",
     "axios": "^0.27.2",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
